--- a/article_alphabet.html
+++ b/article_alphabet.html
@@ -51,20 +51,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Penguin Phoenix</a>
+          <a class="navbar-brand" href="#" target="_blank">Penguin Phoenix</a>
         </div>
   
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Home</a></li>
-            <li><a href="/#portfolio">Portfolio</a></li>
-            <li><a href="/#credentials">Credentials</a></li>
-            <li><a href="/#publications">Publications</a></li>
-            <li><a href="/#contact">Contact</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
     </nav>
     
     <!-- Flex container for portfolio sections -->
