--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <!--font awesome icon library-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
@@ -392,6 +393,8 @@
           <p onclick=window.open('https://www.kaggle.com/ewotawa') class="fab fa-kaggle fa-contact" role="button"></p>
 
           <p onclick=window.open('https://www.youtube.com/channel/UCvjRTRpbT3PZ0jwKd8aOiEg') class="fab fa-youtube fa-contact" role="button"></p>
+          
+          <p onclick=window.open('https://trailblazer.me/id/ewotawa') class="fab fa-salesforce fa-contact" role="button"></p>
           <br>
         </div>
       </article>
