add Will Tom Eat It? to portfolio

--- a/index.html
+++ b/index.html
@@ -107,12 +107,34 @@
             </div>
             <div class="caption">
                 <br>
-                <p>I created this project for my freeCodeCamp Tribute Page assignment.
-                <p>The page functionality features HTML, CSS, and Bootstrap. The content profiles my favorite baseball player.</p>
+                <p>I created this project for my freeCodeCamp Responsive Web Design Tribute Page assignment.
+                <p>The page functionality features HTML and CSS. The content profiles my favorite baseball player.</p>
                 <form>
                   <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/willie-mcgee/') type="button" value="Launch Website">
                   <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
                   <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/WNwroBV') type="button" value="Preview on CodePen">
+                </form>
+              </div>
+          </li>
+
+          
+          <li>
+            <!-- Build a Survey Form -->
+            <h3 class="text-center thumb-box">Will Tom Eat It?</h3>
+            <div class="thumbnail-container">
+              <div class="thumbnail">
+                <iframe src="https://ewotawa.github.io/fcc-form/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+              </div>
+            </div>
+            <div class="caption">
+                <br>
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Survey Form assignment.
+                <p>The page functionality features HTML and CSS. The content celebrates the <i>Will Tom Eat It?</i> segment on the tastytrade network.</p>
+                <form>
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-form/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/bGppvoP') type="button" value="Preview on CodePen">
+                  <input class="btn btn-default" onclick=window.open('https://www.tastytrade.com/tt/') type="button" value="Visit tastytrade">
                 </form>
               </div>
           </li>
@@ -170,7 +192,6 @@
               <p>This app relies on the Census Bureau's geolocation API to convert a US street address to latitude and longitude coordinates, which then are fed into the FCC Weather API to deliver local weather data. I decided to revamp this page in May 2018 to practice concepts I was learning in Udacty's Mobile Web Specialist Nanodegree program. You can access both versions of the site below.</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/weather-app/') type="button" value="Launch Updated Website">
-                <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/qPpwaK/') type="button" value="Preview on CodePen">
               </form>
             </div>
           </li>
