--- a/index.html
+++ b/index.html
@@ -141,6 +141,26 @@
 
           
           <li>
+            <!-- Build a Product Landing Page -->
+            <h3 class="text-center thumb-box">Jack's Lanterns</h3>
+            <div class="thumbnail-container">
+              <div class="thumbnail">
+                <iframe src="https://ewotawa.github.io/fcc-product-landing-page/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+              </div>
+            </div>
+            <div class="caption">
+                <br>
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Product Landing Page assignment.
+                <p>The page functionality features HTML and CSS. Halloween is my favorite holiday.</p>
+                <form>
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-product-landing-page/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/PoNNMGo') type="button" value="Preview on CodePen">
+                </form>
+              </div>
+          </li>
+
+          <li>
             <!-- Meet the Mighty Five -->
             <h3 class="text-center thumb-box">Meet the Mighty Five</h3>
             <div class="thumbnail-container">
