Add Technical Documentation Page to portfolio

--- a/index.html
+++ b/index.html
@@ -161,6 +161,26 @@
           </li>
 
           <li>
+            <!-- Build a Technical Documentation Page -->
+            <h3 class="text-center thumb-box">The SeaMonkey Project</h3>
+            <div class="thumbnail-container">
+              <div class="thumbnail">
+                <iframe src="https://ewotawa.github.io/fcc-technical-doc/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+              </div>
+            </div>
+            <div class="caption">
+                <br>
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Technical Documentation Page assignment.
+                <p>The page functionality features HTML, CSS, and JavaScript. I've been a fan of The SeaMonkey Project since the application came pre-installed with LXLE, the distribution I installed on my first Linux laptop.</p>
+                <form>
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-technical-doc/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/ExKgRBq') type="button" value="Preview on CodePen">
+                </form>
+              </div>
+          </li>
+
+          <li>
             <!-- Meet the Mighty Five -->
             <h3 class="text-center thumb-box">Meet the Mighty Five</h3>
             <div class="thumbnail-container">
