add missing </p> tags

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="caption">
                 <br>
-                <p>I created this project for my freeCodeCamp Responsive Web Design Tribute Page assignment.
+                <p>I created this project for my freeCodeCamp Responsive Web Design Tribute Page assignment.</p>
                 <p>The page functionality features HTML and CSS. The content profiles my favorite baseball player.</p>
                 <form>
                   <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/willie-mcgee/') type="button" value="Launch Website">
@@ -128,7 +128,7 @@
             </div>
             <div class="caption">
                 <br>
-                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Survey Form assignment.
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Survey Form assignment.</p>
                 <p>The page functionality features HTML and CSS. The content celebrates the <i>Will Tom Eat It?</i> segment on the tastytrade network.</p>
                 <form>
                   <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-form/') type="button" value="Launch Website">
@@ -150,7 +150,7 @@
             </div>
             <div class="caption">
                 <br>
-                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Product Landing Page assignment.
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Product Landing Page assignment.</p>
                 <p>The page functionality features HTML and CSS. Halloween is my favorite holiday.</p>
                 <form>
                   <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-product-landing-page/') type="button" value="Launch Website">
@@ -170,7 +170,7 @@
             </div>
             <div class="caption">
                 <br>
-                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Technical Documentation Page assignment.
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Technical Documentation Page assignment.</p>
                 <p>The page functionality features HTML, CSS, and JavaScript. I've been a fan of The SeaMonkey Project since the application came pre-installed with LXLE, the distribution I installed on my first Linux laptop.</p>
                 <form>
                   <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-technical-doc/') type="button" value="Launch Website">
