update By day ... section of Welcome

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <hr>
         <div>
           <h3>By day ...</h3>
-          <p>I am a consultant providing customer-focused solutions in an agile environment.</p>
+          <p>I turn coffee into configuration and find better ways to do things with data.</p>
         </div>
         <div>
           <h3 class="text-right">By night ...</h3>
