update By Night ... section of Welcome

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div>
           <h3 class="text-right">By night ...</h3>
-          <p class="text-right">I'm usually tinkering with data science or with web design. I'm currently exploring service workers and other offline-first strategies, JavaScript, and PyTorch.</p>
+          <p class="text-right">I tinker with data science and web design.</p>
         </div>
         <hr>
         <div>
