add Personal Portfolio Page and fCC Responsive Web Design certification

--- a/index.html
+++ b/index.html
@@ -181,6 +181,26 @@
           </li>
 
           <li>
+            <!-- Build a Personal Portfolio Page -->
+            <h3 class="text-center thumb-box">Personal Portfolio Page</h3>
+            <div class="thumbnail-container">
+              <div class="thumbnail">
+                <iframe src="https://ewotawa.github.io/fcc-portfolio-page/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+              </div>
+            </div>
+            <div class="caption">
+                <br>
+                <p>I created this project for my freeCodeCamp Responsive Web Design Build a Personal Portfolio Page assignment.</p>
+                <p>The page functionality features HTML, CSS, and JavaScript. </p>
+                <form>
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/fcc-portfolio-page/') type="button" value="Launch Website">
+                  <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org') type="button" value="Visit freeCodeCamp">
+                  <input class="btn btn-default" onclick=window.open('https://codepen.io/ewotawa/full/mdPOvBd') type="button" value="Preview on CodePen">
+                </form>
+              </div>
+          </li>
+
+         <li>
             <!-- Meet the Mighty Five -->
             <h3 class="text-center thumb-box">Meet the Mighty Five</h3>
             <div class="thumbnail-container">
@@ -384,7 +404,7 @@
               </ul>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.youracclaim.com/badges/c8e18533-7416-4e3f-b8c6-7c8e5c3c0cfc/public_url') type="button" value="View Credential">
-                <input class="btn btn-default" onclick=window.open('https://www.microsoft.com/en-us/learning/exam-AZ-900.aspx') type="button" value="Learn More"
+                <input class="btn btn-default" onclick=window.open('https://www.microsoft.com/en-us/learning/exam-AZ-900.aspx') type="button" value="Learn More">
               </form>
             </div> 
           </li>
@@ -398,11 +418,35 @@
               <p>As much fun as I've had learning new programming languages and platforms, I really enjoyed the chance to get back to the roots of computer science. I remember my dad sharing stories with me about working with COBOL and the Federal Reserve Bank of St. Louis mainframe system. This course offered a unique opportunity to see how those technologies are applied today.</p>
               <form>
                 <input class="btn btn-default" onclick=window.open('https://www.youracclaim.com/badges/2ddbf15e-9e4a-41f5-86fc-362e6150a19a/public_url') type="button" value="View Credential">
-                <input class="btn btn-default" onclick=window.open('https://www.coursera.org/learn/cobol-programming-vscode?') type="button" value="Learn More"
+                <input class="btn btn-default" onclick=window.open('https://www.coursera.org/learn/cobol-programming-vscode?') type="button" value="Learn More">
               </form>
             </div> 
           </li>
         
+          <li>
+            <!-- freeCodeCamp Responsive Web Design -->
+            <h3 class="text-center thumb-box">freeCodeCamp Responsive Web Design</h3>
+            <img class="cred" src="assets/images/fcc_responsive_web_design.png">
+            <div class="caption">
+              <br>
+              <p>This certificate represents about 300 hours of coursework, covering the following topics:</p>
+              <ul>
+                <li>Basic HTML and HTML5</li>
+                <li>Basic CSS</li>
+                <li>Applied Visual Design</li>
+                <li>Applied Accessibility</li>
+                <li>Responsive Web Design Principles</li>
+                <li>CSS Flexbox</li>
+                <li>CSS Grid</li>
+                <li>Responsive Web Design Projects</li>
+              </ul>
+              <form>
+                <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org/certification/ewotawa/responsive-web-design') type="button" value="View Credential">
+                <input class="btn btn-default" onclick=window.open('https://www.freecodecamp.org/') type="button" value="Learn More">
+              </form>
+            </div> 
+          </li>
+
         </ul>
       </article>
       
