updated By night ... text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div>
           <h3 class="text-right">By night ...</h3>
-          <p class="text-right">I tinker with data science and web design.</p>
+          <p class="text-right">I tinker with web development and data science.</p>
         </div>
         <hr>
         <div>
