--- a/index.html
+++ b/index.html
@@ -501,6 +501,22 @@
               </div>
           </li>
 
+          <li>
+            <!-- #Grapevine Plots -->
+            <h3 class="text-center thumb-box">Grapevine Plots</h3>
+            <div class="thumbnail-container">
+              <div class="thumbnail">
+                <iframe src="https://ewotawa.github.io/grapevine_plots/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+              </div>
+            </div>
+            <div class="caption">
+                <br>
+                <p>A collection of articles celebrating wine through data exploration.</p>
+                <form>
+                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/grapevine_plots/') type="button" value="View Page">
+                </form>
+              </div>
+          </li>
 
         </ul>
         
