update portfolio page to point to grapevineplots.com

--- a/index.html
+++ b/index.html
@@ -506,14 +506,14 @@
             <h3 class="text-center thumb-box">Grapevine Plots</h3>
             <div class="thumbnail-container">
               <div class="thumbnail">
-                <iframe src="https://ewotawa.github.io/grapevine_plots/" onload="this.style.opacity = 1" frameborder="0"></iframe>
+                <iframe src="https://www.grapevineplots.com/" onload="this.style.opacity = 1" frameborder="0"></iframe>
               </div>
             </div>
             <div class="caption">
                 <br>
                 <p>A collection of articles celebrating wine through data exploration.</p>
                 <form>
-                  <input class="btn btn-default" onclick=window.open('https://ewotawa.github.io/grapevine_plots/') type="button" value="View Page">
+                  <input class="btn btn-default" onclick=window.open('https://www.grapevineplots.com/') type="button" value="View Page">
                 </form>
               </div>
           </li>
