add a font for the flask icon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!--Individual Stylesheet-->
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/fonts.css">
 
     <!-- Service Worker Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -113,7 +114,7 @@
               </section>
               <section class="caption">
                 <h2 class="title">Willie McGee</h2>
-                <article class="languages">
+                <article class="languages flex-box">
                   <h2 class="fab fa-html5"></h2>
                   <h2 class="fab fa-css3-alt"></h2>
                   <h2 class="icon-flask"></h2>
