--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <p>I created this project for my freeCodeCamp Responsive Web Design Tribute Page assignment.</p>
                   <p>The page functionality features HTML and CSS. The content profiles my favorite baseball player.</p>
                 </article>
-                <article id="links" class="flex-box-wrap">
+                <article id="links" class="flex-box">
                   <p class="flex-item" onclick=window.open('https://ewotawa.github.io/willie-mcgee/')>
                     <i class="fas fa-link"></i>
                      Link
