remove service worker from project, read JSON for portfolio successfully

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       gtag('config', 'UA-128951767-1');
     </script>
 
+    <!-- JSON files -->
+    <script type="text/javascript" charset="utf-8" src="assets/data/portfolio.json"></script>
 
   </head>
 
@@ -101,7 +103,7 @@
           <h1 class="text-center full-width">Portfolio</h1>
 
           <!-- List of portfolio items -->
-          <ul class="portfolio-list">
+          <ul id="portfolio-list" class="portfolio-list">
 
             <li class="project-tile">
                 <!-- Tribute Page -->
@@ -632,11 +634,8 @@
         </div> <!-- row -->
       </footer>
 
-        <!-- JavaScript link -->
-    <script type="application/javascript" charset="utf-8" src="assets/js/idb.js"></script>
-    <script type="application/javascript" charset="utf-8" src="sw.js"></script>
+    <!-- JavaScript link -->
     <script type="application/javascript" charset="utf-8" src="assets/js/main.js"></script>
-    <script type="application/javascript" charset="utf-8" src="assets/js/indexController.js"></script>
 
     </div>
 
