--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Elizabeth Wotawa's portfolio page">
-    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar, 60DaysofUdacity, grapevineplots">
+    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PenguinPhoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar, 60DaysofUdacity, grapevineplots, fullstack, fullstackdeveloper, datascience, vizualization, analytics, developer">
     <meta name="author" content="Elizabeth Wotawa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -114,68 +114,7 @@
           <h1 class="text-center full-width">Publications</h1>
 
           <!-- List of publications -->
-          <ul class="portfolio-list">
-
-
-            <li>
-              <!-- Penguin Phoenix Philosophy -->
-              <h3 class="text-center thumb-box">The Penguin Phoenix Philosophy</h3>
-              <img class="cred" src="assets/images/ian-parker-546258-unsplash.jpg">
-              <div class="caption">
-                  <br>
-                  <p>What bringing an old laptop back to life with Linux taught me about technology, coding, and myself.</p>
-                  <form>
-                    <input class="btn btn-default" onclick=window.open('https://medium.freecodecamp.org/the-penguin-phoenix-philosophy-8a8dcda178aa') type="button" value="View Article">
-                    <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@evanescentlight?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Ian Parker"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Ian Parker</span></a>
-                  </form>
-                </div>
-            </li>
-
-             <li>
-              <!-- The Alphabet of Nations -->
-              <h3 class="text-center thumb-box">The Alphabet of Nations</h3>
-              <img class="cred" src="assets/images/alphabet_of_nations_opt_256.gif">
-              <div class="caption">
-                  <br>
-                  <p>How to create an animated GIF from a sequence of scanned JPG images in the Linux Terminal with ImageMagick and Gifsicle.</p>
-                  <form>
-                    <input class="btn btn-default" onclick=window.open('article_alphabet.html') type="button" value="View Article">
-                  </form>
-                </div>
-            </li>
-
-            <li>
-              <!-- #MayThe4th by the Numbers -->
-              <h3 class="text-center thumb-box">#MayThe4th by the Numbers</h3>
-              <img class="cred" src="assets/images/maythe4th.png">
-              <div class="caption">
-                  <br>
-                  <p>#MayThe4th By the Numbers: An Analysis of Twitter data celebrating Star Wars Day 2020</p>
-                  <p>A tribute to the final season of <i>Star Wars: The Clone Wars</i>.</p>
-                  <form>
-                    <input class="btn btn-default" onclick=window.open('https://youtu.be/34CEoRHfwko') type="button" value="Watch Video">
-                    <input class="btn btn-default" onclick=window.open('https://github.com/ewotawa/CloneWarsDocs') type="button" value="GitHub repo">
-                  </form>
-                </div>
-            </li>
-
-            <li>
-              <!-- #Grapevine Plots -->
-              <h3 class="text-center thumb-box">Grapevine Plots</h3>
-              <div class="thumbnail-container">
-                <div class="thumbnail">
-                  <iframe src="https://www.grapevineplots.com/" onload="this.style.opacity = 1" frameborder="0"></iframe>
-                </div>
-              </div>
-              <div class="caption">
-                  <br>
-                  <p>A collection of articles celebrating wine through data exploration.</p>
-                  <form>
-                    <input class="btn btn-default" onclick=window.open('https://www.grapevineplots.com/') type="button" value="View Page">
-                  </form>
-                </div>
-            </li>
-
+          <ul id="pubs-list" class="portfolio-list">
           </ul>
 
         </article>
