fix javascript for buttons, add more JSON

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
           <!-- List of portfolio items -->
-          <ul class="portfolio-list">
+          <ul id="fullstack-list" class="portfolio-list">
 
             <li>
               <!-- freeCodeCamp Responsive Web Design -->
