fix spelling of visualization

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Elizabeth Wotawa's portfolio page">
-    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PenguinPhoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar, 60DaysofUdacity, grapevineplots, fullstack, fullstackdeveloper, datascience, vizualization, analytics, developer">
+    <meta name="keywords" content="Wotawa, Elizabeth Wotawa, Penguin Phoenix, PenguinPhoenix, PytorchUdacityScholar, GrowWithGoogle, GoogleUdacityScholars, UdacityFacebookScholar, 60DaysofUdacity, grapevineplots, fullstack, fullstackdeveloper, datascience, visualization, analytics, developer">
     <meta name="author" content="Elizabeth Wotawa">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
