--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128951767-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TCMW6Y4EV0"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-128951767-1');
+      gtag('config', 'G-TCMW6Y4EV0');
     </script>
 
     <!-- JSON files -->
